# true_or_false

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
tests/: test_true_or_false.py
true_or_false/: __init__.py  true_or_false.py
