[tool.poetry]
name = "true_or_false"
version = "0.2.0"
description = "A simple python module to determine whether an input is True or False."
authors = ["Albert Pang <alpaalpa@mac.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alpaalpa/true_or_false"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
